# Yield-Smart

./: LICENSE  README.md
API/: .dockerignore  .env.example  .gitignore  Dockerfile  compose.yaml  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt
API/AI_Agent/: asgi.py  settings.py  urls.py  wsgi.py
API/API/: serializers.py  urls.py  views.py
API/app/: main.py
API/app/agent/: agent.py  tools.py
API/app/controllers/v1/: routers.py  routes.py
API/app/controllers/v2/: routers.py
API/app/databases/v1/: firebase_db.py
API/app/firebase/: __init__.py  database.py
API/app/model/: agent.py
API/app/models/v1/: chat.py  image.py  message.py
API/app/routers/: __init__.py  routes.py
API/app/services/v1/: agent.py
API/app/services/v2/: agent.py  preamble_chat.txt  preamble_image.txt  tools.py
API/grootAI/: agent.py  apps.py  firebase_data.py  set_config_file.py  tools.py  tools_list.py  urls.py  views.py
APP/: README.md
APP/YieldSmart/: build.gradle  settings.gradle
APP/YieldSmart/app/: build.gradle  google-services.json
IOT/: Gemini_Model.py  README.md  esp32_code.ino
IOT/YieldSmart_FinalCodes/Gemini_on_esp32/: Gemini_on_esp32.ino
IOT/YieldSmart_FinalCodes/Open_AI_audio/: Open_AI_audio.ino
IOT/YieldSmart_FinalCodes/Yield_Smart/: Yield_Smart.ino
SCRIPT/: .gitignore  Feild_Pos  README.md  file_pos.json  file_pos1.json  main.py
WEBSITE/: .env  .gitignore  README.md  a.txt  package-lock.json  package.json
WEBSITE/api/: index.js
WEBSITE/client/: e.txt  index.html  package-lock.json  package.json  vite.config.js
(+70 files in other folders)
